[FIX]Some layout bugs

--- a/assets/css/mobile/login.css
+++ b/assets/css/mobile/login.css
@@ -12,7 +12,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  padding: 0;
+  padding-bottom: 20px;
   margin: 0;
 }
 
